--- a/index.html
+++ b/index.html
@@ -25,20 +25,18 @@
                                             <div><input v-model="name" type="text" placeholder="name">
                                               <button v-on:click="sayHello">Hey you!</button>
                                             </div>
+                                          </div>
+                                        </v-card-title>
+                                        <v-card-actions>
                                             <div v-if="isLoggedIn">
                                                 Welcome to coligo!
-                                                <button @click="login" type="submit">Logout</button>
+                                                <v-btn  @click="login"flat color="red">logout</v-btn>
                                               </div>
                                               <div v-else>
                                                 <input type="text" placeholder="username">
                                                 <input type="password" placeholder="password">
-                                                <button @click="login" type="submit">Login</button>
-                                              </div>   
-                                          </div>
-                                        </v-card-title>
-                                        <v-card-actions>
-                                          <v-btn flat color="orange">Share</v-btn>
-                                          <v-btn flat color="orange">Explore</v-btn>
+                                                <v-btn  @click="login" flat color="red">Login</v-btn>
+                                              </div>
                                         </v-card-actions>
                                       </v-card>
                                     </v-flex>
@@ -67,7 +65,8 @@
         },
         methods: {
           sayHello: function(){
-            alert('Hey ' + this.name + ' bienvenue sur notre plateforme'   );
+            alert('Hey ' + this.name + ' tu es un vrai joueur '   )
+            ;
           },
           login: function(){
               // 'this' refers to the vm instance
