taille des ecritures

--- a/sparkyyy.html
+++ b/sparkyyy.html
@@ -20,7 +20,7 @@
                                       <v-card>
                                         <v-card-title primary-title>
                                           <div>
-                                            <h3 class="headline mb-0">Entrer dans le monde de l'eSport:</h3>
+                                            <h2 class="headline mb-0">Entrer dans le monde de l'eSport:</h2>
                                             <div>
                                             </div>
                                           </div>
@@ -28,7 +28,7 @@
                                         <v-card-actions>
 
                                             <div v-if="isLoggedIn">
-                                                <h3> Bienvenue chez Sparkyyy! </h3>
+                                                <h2>Bienvenue chez Sparkyyy! </h2>
                                                 <v-btn  @click="login"flat color="red">logout</v-btn>
                                               </div>
                                               <div v-else>
@@ -54,7 +54,7 @@
                                       <v-card  v-if="isLoggedIn">
                                         <v-card-title primary-title>
                                           <div>
-                                            <h3 class="headline mb-0">Les jeux en avant sur notre plateforme sont :</h3>
+                                            <h2>Les jeux en avant sur notre plateforme sont :</h2>
                                             <p>Fortnite, CS GO ...</p>
                                             <div>
                                             </div>
@@ -63,8 +63,8 @@
                                         <v-card-actions>
 
                                             <div>
-                                                <h3>Nous rejoindre, nous contacter</h3>
-                                                <p>Rejoignez notre discord en cliquant sur ce lien ... </p>
+                                                <h2>Nous rejoindre, nous contacter</h2>
+                                                <p>Rejoignez notre discord en cliquant ici </p>
                                                 
                                               </div>
                                         </v-card-actions>
