delet de truc en doube ou qui servent a rien

--- a/sparkyyy.html
+++ b/sparkyyy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>VueJs Tutorial - coligo</title>
+    <title>Sparkyyy eSport</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
   <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
@@ -64,7 +64,8 @@
 
                                             <div>
                                                 <h2>Nous rejoindre, nous contacter</h2>
-                                                <p>Rejoignez notre discord en cliquant ici </p>
+                                                <p>Rejoignez notre discord en cliquant ici
+                                                    <a href="https://discord.gg/NgJn67S" target="ici"></a></p>
                                                 
                                               </div>
                                         </v-card-actions>
